CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_emplmt_income__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_emplmt_income</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_emplmt_income</externalName>
    <fields>
        <fullName>amt_income_annual__c</fullName>
        <description>amt_income_annual</description>
        <externalDeveloperName>amt_income_annual</externalDeveloperName>
        <label>Amount Income Annual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_emplmt__c</fullName>
        <description>cde_type_emplmt</description>
        <externalDeveloperName>cde_type_emplmt</externalDeveloperName>
        <label>Code Type Employment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Identifier Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_income</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Eligity Family Compsn ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Employment Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_income</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Identifier Individual employment</label>
        <length>18</length>
        <referenceTargetField>T_SBSD_INDIV_EMPLMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
        <relationshipLabel>batchsit$t_indiv_eligty_emplmt_income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_income</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_emplmt_income__c</fullName>
        <description>idn_indiv_eligty_emplmt_income</description>
        <externalDeveloperName>idn_indiv_eligty_emplmt_income</externalDeveloperName>
        <label>Indiv Eligity Emplmt Income ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Identifier Eligity Family Composition</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Employment Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_income</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_income1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nam_busns__c</fullName>
        <description>nam_busns</description>
        <externalDeveloperName>nam_busns</externalDeveloperName>
        <label>Business Name of Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Individual Eligibility Employment Income</label>
    <pluralLabel>Individual Eligibility Employment Income</pluralLabel>
</CustomObject>